Implementado a funcao para gerar numeros aleatorios ate o usuario inputar os dados dele + implementacao de validacao de dados no input

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Result section -->
         <div>
             <p></p><span id="dias_vivo"></span> Dias vividos ate agora</p>
-            <p>isso equivalente a <span id="horas"></span> horas <span id="minutos"></span> minutos</p>
+            <p>isso equivalente a <span id="horas_vivo"></span> horas <span id="minutos_vivo"></span> minutos</p>
         </div>
     </div>
     <script src="./assets/js/script.js"></script>
